# happy_os

./: CMakeLists.txt  happy.rviz  happy.xml  package.xml
description/launch/: view_robot.launch.py
description/ros2_control/: happy.ros2_Control.xacro  happy.ros2_control.xacro
description/urdf/: amy_marks.urdf.xacro
hardware/happy_hardware_interface/: Cargo.toml
hardware/happy_hardware_interface/src/: lib.rs
hardware/happy_hardware_interface/src/motor/: constants.rs  crc.rs  error.rs  mod.rs
hardware/happy_ros2_control/: happy_system.cpp
hardware/happy_ros2_control/include/happy/: happy_system.hpp
hardware/happy_ros2_control/include/happy_ros2_control/: happy_system.hpp
hardware/motor_interface/: Cargo.toml
hardware/motor_interface/src/: constants.rs  crc.rs  error.rs  lib.rs  message.rs  motor_controller.rs  tests.rs
hardware/motor_interface/src/message/: modbus_command.rs  modbus_register.rs  modbus_request.rs  modbus_response.rs
hardware/motor_interface/src/motor_controller/: constants.rs  error.rs  motor_status.rs
hardware/motor_interface/src/tests/: magic_strings.rs
